--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 
 <head>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <section class="header">
+  <div class="header">
     <div class="recherche">
       <p>Choose another country or region to see content specific to your location.</p>
       <div class="recherchebtn">
@@ -28,7 +28,7 @@
             <p>country</p>
           </div>
 
-          <svg class="smallicon" mlns="http://www.w3.org/2000/svg"
+          <svg class="smallicon"
             viewBox="0 0 384 512"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2026 Fonticons, Inc.-->
             <path fill="currentcolor"
               d="M169.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 306.7 54.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
@@ -77,12 +77,12 @@
       <p>.</p>
       <a href="#">Découvrir ></a>
     </div>
-  </section>
+  </div>
 
   <div class="container-fluid sectionevent ">
     <div class="event">
       <h2 class="title2 ">Évènement shopping Apple Store</h2>
-      <p id="gift" class="description1 ">Dé­couvrez la toute dernière géné­ration d’iPhone.</p>
+      <p class="gift description1">Dé­couvrez la toute dernière géné­ration d’iPhone.</p>
       <a href="#" class="btn1">En savoir plus</a>
     </div>
   </div>
@@ -90,7 +90,7 @@
   <div class="container-fluid sectioniphone ">
     <div class="iphones">
       <h2 class="title2 ">iPhone</h2>
-      <p id="gift" class="description1 ">Dé­couvrez la toute dernière géné­ration d’iPhone.</p>
+      <p class="gift description1 ">Dé­couvrez la toute dernière géné­ration d’iPhone.</p>
       <div class="boutons2">
         <a href="#" class="btn1">En savoir plus</a>
         <a href="#" class="btn5">Acheter un iPhone</a>
@@ -102,7 +102,7 @@
   <div class="container-fluid sectiongift">
     <div class="gift">
       <h2 class="title2 ">Offrez un cadeau très spécial.</h2>
-      <p id="gift" class="description1">Donnez-leur le cadeau tant attendu.</p>
+      <p class="gift description1">Donnez-leur le cadeau tant attendu.</p>
       <a href="#" class="btn4">Acheter des cadeaux</a>
     </div>
   </div>
@@ -132,7 +132,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-6 col-lg-7 " >
+      <div class="col-xl-6 col-lg-7 ">
         <div class="container-fluid article2">
           <h3 class="title3">AirPods Pro 3</h3>
           <p class="description2">La meilleure Réduction active du bruit intra‑auriculaire au monde.</p>
@@ -252,14 +252,14 @@
   </div>
 
   <div class="container-fluid sectionfamily ">
-    
+
   </div>
 
   <div class="container-fluid footer ">
-    
+
   </div>
 
-  
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
