Ajout des balises meta
balise twitter
balise og
balise générique

--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
-</head>
+  <title>TP_Apple</title>
+  <meta name="description" content="Apple commercial website...">
+  <meta name="msapplication-TileColor" content="#1092F1">
+  <meta name="msapplication-TileImage" content="https://microlead.fr/images/seo/fav-icon.png">
+  <meta property="og:title" content="TP_Apple">
+  <meta property="og:description" content="Apple commercial website...">
+  <meta property="og:image" content="https://">
+  <meta property="twitter:title" content="TP_Apple">
+  <meta property="twitter:description" content="Apple commercial website...">
+  <meta property="twitter:image" content="https://">
+  <meta name="author" content="Owen Cazaux">
+  <meta name="copyright" content="© mon copyright">
+  
+  </head>
 
 <body>
   <div class="header">
