--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <meta property="twitter:image" content="https://">
   <meta name="author" content="Owen Cazaux">
   <meta name="copyright" content="© mon copyright">
-  
-  </head>
+
+</head>
 
 <body>
-  <div class="header">
-    <div class="recherche">
+  <div class=" header" role="banner">
+    <div class="recherche col-12">
       <p>Choose another country or region to see content specific to your location.</p>
       <div class="recherchebtn">
 
@@ -67,8 +67,8 @@
 
     </div>
 
-    <div class="navbar">
-      <img id="logoapple" src="logo.png" alt="logoapple">
+    <div class="navbar col-12">
+      <img id="logoapple" src="images/logo.png" alt="logoapple">
       <p>Store</p>
       <p>Mac</p>
       <p>Ipad</p>
@@ -80,11 +80,11 @@
       <p>Divertissement</p>
       <p>Accessoires</p>
       <p>Assistance</p>
-      <img id="loupe" src="loupe.png" alt="loupe">
-      <img id="shop" src="shop.png" alt="shop">
+      <img id="loupe" src="images/loupe.png" alt="loupe">
+      <img id="shop" src="images/shop.png" alt="shop">
     </div>
 
-    <div class="regle">
+    <div class="regle col-12">
       <p>Pour chaque achat réglé avec Apple Pay chez Apple, nous reversons 5 dollars au Fonds mondial de lutte contre le
         sida. Jusqu’au 07/12 </p>
       <p>.</p>
@@ -92,40 +92,44 @@
     </div>
   </div>
 
-  <div class="container-fluid sectionevent ">
-    <div class="event">
-      <h2 class="title2 ">Évènement shopping Apple Store</h2>
-      <p class="gift description1">Dé­couvrez la toute dernière géné­ration d’iPhone.</p>
-      <a href="#" class="btn1">En savoir plus</a>
-    </div>
-  </div>
+ 
 
-  <div class="container-fluid sectioniphone ">
-    <div class="iphones">
-      <h2 class="title2 ">iPhone</h2>
-      <p class="gift description1 ">Dé­couvrez la toute dernière géné­ration d’iPhone.</p>
-      <div class="boutons2">
+
+    <div class=" sectionevent col-12" role="main">
+      <div class="event">
+        <h2 class="title2 ">Évènement shopping Apple Store</h2>
+        <p class="gift description1">Dé­couvrez la toute dernière géné­ration d’iPhone.</p>
         <a href="#" class="btn1">En savoir plus</a>
-        <a href="#" class="btn5">Acheter un iPhone</a>
       </div>
-
     </div>
-  </div>
 
-  <div class="container-fluid sectiongift">
-    <div class="gift">
-      <h2 class="title2 ">Offrez un cadeau très spécial.</h2>
-      <p class="gift description1">Donnez-leur le cadeau tant attendu.</p>
-      <a href="#" class="btn4">Acheter des cadeaux</a>
+    <div class=" sectioniphone col-12" role="main">
+      <div class="iphones">
+        <h2 class="title2 ">iPhone</h2>
+        <p class="gift description1 ">Dé­couvrez la toute dernière géné­ration d’iPhone.</p>
+        <div class="boutons2">
+          <a href="#" class="btn1">En savoir plus</a>
+          <a href="#" class="btn5">Acheter un iPhone</a>
+        </div>
+
+      </div>
     </div>
-  </div>
 
-  <div class="container-fluid packarticle">
+    <div class=" sectiongift col-12" role="main">
+      <div class="gift">
+        <h2 class="title2 ">Offrez un cadeau très spécial.</h2>
+        <p class="gift description1">Donnez-leur le cadeau tant attendu.</p>
+        <a href="#" class="btn4">Acheter des cadeaux</a>
+      </div>
+    </div>
+  
+
+  <div class="container-fluid packarticle" role="main">
     <div class="row">
-      <div class="col-xl-6 col-lg-7 ">
-        <div class="container-fluid article1">
+      <div class="col-xl-6 col-lg-12 ">
+        <div class="container article1">
           <!-- Image superposée -->
-          <img src="ipadair.png" alt="IpadAir" class="ipadair">
+          <img src="images/ipadair.png" alt="IpadAir" class="ipadair">
           <p class="description1">Maintenant boosté par la puce M3.</p>
 
           <div class="boutons2">
@@ -145,8 +149,8 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-6 col-lg-7 ">
-        <div class="container-fluid article2">
+      <div class="col-xl-6 col-lg-12 ">
+        <div class="container article2">
           <h3 class="title3">AirPods Pro 3</h3>
           <p class="description2">La meilleure Réduction active du bruit intra‑auriculaire au monde.</p>
 
@@ -177,10 +181,10 @@
     </div>
 
     <div class="row">
-      <div class="col-xl-6 col-lg-7 ">
+      <div class="col-xl-6 col-lg-12 ">
         <div class="container-fluid article3">
           <!-- Image superposée -->
-          <img src="watchseries11.png" alt="watchseries11" class="watchseries11">
+          <img src="images/watchseries11.png" alt="watchseries11" class="watchseries11">
           <p class="description1">L’Apple Watch ultime pour votre santé.</p>
 
           <div class="boutons2">
@@ -200,8 +204,8 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-6 col-lg-7">
-        <div class="container-fluid article4">
+      <div class="col-xl-6 col-lg-12">
+        <div class="container article4">
           <h3 class="title3">iPad</h3>
           <p class="description3">Maintenant avec la vitesse de la puce A16 <br>et un stockage de base doublé.</p>
 
@@ -230,7 +234,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xl-6 col-lg-7 ">
+      <div class="col-xl-6 col-lg-12 ">
         <div class="container-fluid article5">
           <!-- Image superposée -->
           <h3 class="title3">MacBook Air</h3>
@@ -248,9 +252,9 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-6 col-lg-7">
+      <div class="col-xl-6 col-lg-12">
         <div class="container-fluid article6">
-          <img src="tradein.png" alt="Trade In" class="tradein">
+          <img src="images/tradein.png" alt="Trade In" class="tradein">
           <p class="description3">Économisez de 190 € à 780 € sur votre <br>prochain achat en faisant reprendre un
             <br>iPhone 13 ou plus récent3.
           </p>
@@ -264,11 +268,11 @@
     </div>
   </div>
 
-  <div class="container-fluid sectionfamily ">
+  <div class="container-fluid sectionfamily " role="main">
 
   </div>
 
-  <div class="container-fluid footer ">
+  <div class="container-fluid footer " role="main">
 
   </div>
 
