--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
       </div>
       <div class="col-xl-6 col-lg-12">
         <div class="container-fluid article6">
-          <img src="images/tradein.png" alt="Trade In" class="tradein">
+          <img src="images/Tradein.png" alt="Trade In" class="tradein">
           <p class="description3">Économisez de 190 € à 780 € sur votre <br>prochain achat en faisant reprendre un
             <br>iPhone 13 ou plus récent3.
           </p>
